fix overflow

--- a/src/views/components/NoticeSection/NoticeSection.module.scss
+++ b/src/views/components/NoticeSection/NoticeSection.module.scss
@@ -10,6 +10,7 @@
     .title {
       position: relative;
       left: 50%;
+      width: 100%;
       margin-left: -357px;
       h2 {
         font-size: 80px;
